# 3dslicer-claude-bridge

./: .coveragerc  .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  ISSUES.md  README.md  SECURITY.md  SPECIFICATION.md  TESTING.md  TODO.md  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md  settings.json  settings.local.json
.claude/commands/: bootstrap-env.md  ccj-protocol.md  construct-compare.md  fracture-eval.md  full-spine-workup.md  instability-protocol.md  modic-eval.md  onco-spine.md  screw-plan.md  spine-eval.md  todo.md
.github/: labeler.yml
.github/workflows/: auto-label.yml  ci.yml  lint.yml  publish.yml  test.yml
docs/guides/: setup-mcp-clients.md
docs/plans/: 2026-02-24-code-review-fixes.md  2026-03-07-path-b-reliability.md  PROJECT_STATUS.md  v2-workflow-surface.md  workflow-audit-results.md
docs/plans/archive/: 2026-02-24-code-review-fixes.md  2026-03-07-path-b-reliability.md  2026-03-07-v2-roadmap.md
examples/: simple_query.md
ref/: api-resources.md  api-tools.md  benchmarks.md  error-codes.md  fastmcp.md  project-patterns.md  resilience-patterns.md  security.md  slicer-webserver.md  troubleshooting.md
scripts/: claude-setup.sh
slicer-prod/: .mcp.json  CLAUDE.md  README.md  opencode.json
slicer-prod/.opencode/commands/: ccj-protocol.md  construct-compare.md  fracture-eval.md  full-spine-workup.md  instability-protocol.md  modic-eval.md  onco-spine.md  screw-plan.md  spine-eval.md
slicer-prod/scripts/: sync_surface.py
src/slicer_mcp/: AGENTS.md  __init__.py  __main__.py  circuit_breaker.py  constants.py  diagnostic_tools_ct.py  diagnostic_tools_mri.py  diagnostic_tools_xray.py  instrumentation_tools.py  metrics.py  registration_tools.py  rendering_tools.py  resources.py  server.py  slicer_client.py  spine_constants.py  spine_tools.py  tools.py
src/slicer_mcp/_registry/: __init__.py  _async_common.py  _common.py  base.py  diagnostics.py  registration.py  rendering.py  resources.py  spine.py  workflows.py
src/slicer_mcp/core/: AGENTS.md  __init__.py  async_client.py  circuit_breaker.py  codegen.py  config.py  constants.py  metrics.py  parsing.py  resources.py  slicer_client.py
src/slicer_mcp/features/: AGENTS.md  __init__.py  _codegen_snippets.py  _subprocess.py  _validation.py  base_tools.py  rendering.py  (+1 more)
tests/: __init__.py  conftest.py  test_circuit_breaker.py  test_diagnostic_tools_ct.py  test_diagnostic_tools_mri.py  test_diagnostic_tools_xray.py  test_instrumentation_tools.py  test_mcp_protocol.py  test_metrics.py  test_registration_tools.py  test_rendering_tools.py  test_resources.py  test_slicer_client.py  test_spine_constants.py  test_spine_tools.py  test_tools.py
tests/benchmarks/: __init__.py  test_performance.py
tests/contract/: test_exec_result_protocol.py
tests/integration/: conftest.py  test_smoke.py
tests/unit/: test_async_client.py  test_circuit_breaker.py  test_codegen.py  test_config.py  test_diagnostic_tools_ct.py  test_diagnostic_tools_mri.py  test_diagnostic_tools_xray.py  test_instrumentation_tools.py  test_mcp_protocol.py  test_metrics.py  test_registration_tools.py  test_rendering_tools.py  test_resources.py  test_server.py  test_shim_backward_compat.py  test_slicer_client.py  test_slicer_prod_surface.py  test_spine_constants.py  test_spine_tools.py  test_tools.py  test_workflow_ccj.py  test_workflow_modic.py  test_workflow_onco_spine.py
(+21 files in other folders)
