[project]
name = "slicer-mcp"
version = "1.0.0"
description = "MCP server bridging Claude Code to 3D Slicer for AI-assisted medical image analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "brainbloodbarrier"}
]
keywords = ["mcp", "3d-slicer", "medical-imaging", "claude", "ai", "fastmcp", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "mcp[cli]>=1.1.0",
    "requests>=2.31.0",
    "pydantic>=2.0",
    "packaging>=21.0",
]

[project.urls]
Homepage = "https://github.com/brainbloodbarrier/3dslicer-claude-bridge"
Repository = "https://github.com/brainbloodbarrier/3dslicer-claude-bridge"
Documentation = "https://github.com/brainbloodbarrier/3dslicer-claude-bridge#readme"
Issues = "https://github.com/brainbloodbarrier/3dslicer-claude-bridge/issues"
Changelog = "https://github.com/brainbloodbarrier/3dslicer-claude-bridge/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
    "black>=23.0",
    "ruff>=0.1",
]
metrics = [
    "prometheus_client>=0.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
    "Exame_*",
    "*.nrrd",
    "*.nii",
    "*.nii.gz",
    "*.dcm",
    "tests/",
    ".github/",
    ".pre-commit-config.yaml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/slicer_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests requiring running Slicer instance (deselect with '-m \"not integration\"')",
    "benchmark: marks performance benchmark tests",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP"]
ignore = []

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]

[project.scripts]
slicer-mcp = "slicer_mcp:main"
